--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,7 @@
 body 
 {
   margin-bottom: 120px !important;
-  background: purple !important; 
-  color: white !important;
+  background: navy !important; 
 }
 .page-header {
   margin-top: 0;
